Responsiveness + Leadership NavTab + Conference Info Fixes

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=1536, initial-scale=0.1" />
     <meta name="description" content="DIGI-SUSTAIN 2026 - International Conference on Digital Transformative Practices for a Sustainable Future. 15-17 May 2026 at ABV-IIITM Gwalior, India." />
     <meta name="keywords" content="DIGI-SUSTAIN 2026, academic conference, digital transformation, sustainability, ABV-IIITM Gwalior, Viksit Bharat 2047" />
     <meta name="author" content="ABV-IIITM Gwalior" />
